# IMDB-Sentiment-Pulse

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: exploratory_eda.ipynb
src/: data_loader.py  eda.py  evaluation.py  preprocessing.py  utils.py
src/models/: dl_models.py  ml_models.py
